@@ -23,15 +23,18 @@ reskins-angels-belts-use-angels-tier-colors=Belts use Angel's tier colors
 reskins-angels-use-vanilla-style-ores=Use Vanilla-style ores
 reskins-angels-use-item-variations=Item variations
 
+; Override metal mixing settings to use filtering terminology
+reskins-bobs-mixing-furnace-color=Color: Filtering furnaces
+
 [mod-setting-description]
 reskins-angels-do-angelsbioprocessing=Reskins the intermediates, recipes, and technologies as well as the algae farm, arboretum, bioprocessor, butchery, composter, farms, hatchery, nutrient extractor, press, refugiums, tree seed generators and seed extractors added by Angel's Bioprocessing.
-# reskins-angels-do-angelsexploration=This string is not yet used; do not translate.
+; reskins-angels-do-angelsexploration=This string is not yet used; do not translate.
 reskins-angels-do-angelsindustries=Reskins the big chests and big logistic chests added by Angel's Industries.
 reskins-angels-do-angelspetrochem=Reskins the intermediates, recipes, and technologies, as well as the chemical plants, air filters, electrolysers, gas refineries, steam crackers and oil and gas separators added by Angel's Petrochemical Processing.
 reskins-angels-do-angelsrefining=Reskins the intermediates, recipes, and technologies as well as the crystallizer, electrowhinning cell, filtration unit, hydro plant, liquefier, ore crusher, ore flotation cell, ore leaching plant, ore powderizer, ore refinery, ore sorting facility, salination plant and the washing plant added by Angel's Refining.
 reskins-angels-do-angelssmelting=Reskins the plates, ingots, ores and other intermediates, recipes, and technologies, as well as the casting machines, furnaces, ore processing machines, pellet presses, powder mixers and sintering ovens added by Angel's Smelting.
-# reskins-angels-do-angelsaddons-cab=This string is not yet used; do not translate.
-# reskins-angels-do-angelsaddons-mobility=This string is not yet used; do not translate.
+; reskins-angels-do-angelsaddons-cab=This string is not yet used; do not translate.
+; reskins-angels-do-angelsaddons-mobility=This string is not yet used; do not translate.
 reskins-angels-do-angelsaddons-storage=Reskins the ore silos and warehouses, logistic silos and warehouses, and storage tanks added by Angel's Addons - Storage Options.
 
 reskins-angels-use-angels-material-colors=Colors gears, bearings and bearing balls using Angel’s material colors.\n\nFor example, nitinol gears will be purple instead of a dark gray.
@@ -41,3 +44,6 @@ reskins-angels-use-angels-tier-colors=Colors tiered structures and items using A
 reskins-angels-belts-use-angels-tier-colors=Belts and related entities will use Angel's tier coloring when "__1__" is enabled.\n\nOverridden by "Enable Custom Colors".
 reskins-angels-use-vanilla-style-ores=Replaces Angel-style sprites for Saphirite, Stiratite, Jivolite, Crotinnium, Rubyte and Bobmonium ores with Vanilla-style sprites.
 reskins-angels-use-item-variations=Allows for ingots to have several different arrangements when placed on belts or on the ground, much like mined ore does.
+
+; Override metal mixing settings to use filtering terminology
+reskins-bobs-mixing-furnace-color=Sets color for the stone filtering furnace, steel and fluid burning filtering furnaces, and the electric filtering furnace.
