@@ -20,3 +20,8 @@ reskins.lib.setting_override("bool-setting", "reskins-angels-do-angelsaddons-mob
 if mods["angelsindustries"] then
     reskins.lib.setting_override("bool-setting", "bobmods-plates-bluedeuterium", true)
 end
+
+-- Hide chemical furnace color setting, as Angel's Smelting disables these
+if mods["angelssmelting"] then
+    reskins.lib.setting_override("string-setting", "reskins-bobs-chemical-furnace-color")
+end
